<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greentheme"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login.json"
        app:lottie_loop="true" />

    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:background="@drawable/main_gradient" />-->

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <View
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/welcome"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:fontFamily="sans-serif-light"
            android:text="@string/welcomeSub"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            />





        <ProgressBar
            android:id="@+id/prgresbarlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_middle"
            android:visibility="invisible"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/_50sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />


        <View
            android:layout_width="0dp"
            android:layout_height="100dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_50sdp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/SignIn"
                android:layout_width="wrap_content"
                android:layout_height="76dp"
                android:clickable="true"
                android:padding="@dimen/padding_10"
                android:textStyle="bold"
                app:backgroundTint="@android:color/white"
                app:fabSize="normal"
                android:layout_marginBottom="@dimen/padding_10"
                app:rippleColor="@color/black_overlay"
                app:srcCompat="@drawable/google1"
                android:focusable="true" />


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:theme="@style/ProgressBar.White"
                android:visibility="visible" />

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorBlack" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/sign_up_for_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorBlack" />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>